Novo item adicionado na lista

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Ansible</li>
         <li>Integração Continua</li>
         <li>DevOps</li>
+        <li>Java Orientado a objectos</li>
     </ul>
 </body>
 </html>
