Adicionado novo item na lista de cursos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Integração Continua</li>
         <li>DevOps</li>
         <li>Java Orientado a objectos</li>
+        <li>Java Orientado a objectos 2</li>
     </ul>
 </body>
 </html>
