--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando maquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeca</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura como codigo</li>
         <li>Integração Continua</li>
         <li>DevOps</li>
         <li>Java Orientado a objectos</li>
