Mudando o nome do curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Integração Continua</li>
         <li>DevOps</li>
         <li>Java Orientado a objectos</li>
-        <li>Java Orientado a objectos 2</li>
+        <li>Kubernetes: Introducao a orquestracao de containers</li>
     </ul>
 </body>
 </html>
